[gd_scene load_steps=9 format=3 uid="uid://cu0u4mqhf2e0w"]

[ext_resource type="Script" path="res://scenes/entities/Player/player.gd" id="1_q57er"]
[ext_resource type="PackedScene" uid="uid://bpun3plji8rds" path="res://scenes/components/Health/HealthComponent.tscn" id="4_emusc"]
[ext_resource type="PackedScene" uid="uid://bsxdnjwwuwcca" path="res://scenes/components/HealthBar/HealthBar.tscn" id="5_5ttqo"]
[ext_resource type="PackedScene" uid="uid://q6ugrdiyry72" path="res://scenes/components/HealthBar/ShieldBar.tscn" id="6_c3jqm"]
[ext_resource type="Texture2D" uid="uid://b1gyqxf8ompt1" path="res://assets/ui/other/Reticle.png" id="6_rarct"]
[ext_resource type="PackedScene" uid="uid://y4hetgssvu6u" path="res://assets/ships/Nexar Reaver/nexar_reaver.tscn" id="7_ec8if"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8t61"]
radius = 12.0
height = 74.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvxov"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.290196)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="Player" type="CharacterBody2D" groups=["points_of_interest"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_q57er")

[node name="HitBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(13, -6.82121e-13)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_p8t61")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="ShipComponent" parent="." instance=ExtResource("7_ec8if")]

[node name="HealthComponent" parent="." instance=ExtResource("4_emusc")]
z_index = 1

[node name="HealthBar" parent="HealthComponent" instance=ExtResource("5_5ttqo")]
offset_left = -48.0
offset_top = 67.0
offset_right = 48.0
offset_bottom = 75.0

[node name="ShieldBar" parent="HealthComponent" instance=ExtResource("6_c3jqm")]
offset_left = -48.0
offset_top = 56.0
offset_right = 48.0
offset_bottom = 64.0

[node name="NicknameContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
top_level = true
custom_minimum_size = Vector2(200, 0)
offset_left = -229.0
offset_top = -113.0
offset_right = 918.0
offset_bottom = 32.0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_uvxov")

[node name="MarginContainer" type="MarginContainer" parent="NicknameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="NicknameContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="NicknameLabel" type="Label" parent="NicknameContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 100
text = "Nickname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LvlLabel" type="Label" parent="NicknameContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 90
text = "20 lvl"
vertical_alignment = 1

[node name="Reticle" type="Sprite2D" parent="."]
z_index = 100
z_as_relative = false
position = Vector2(900, 0)
texture = ExtResource("6_rarct")
